<!--
  ~ Copyright 2018 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        android:defaultValue="true"
        android:summary="@string/pref_default_user_name"
        app:key="user_display_name"
        app:title="@string/user_display_name"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        android:defaultValue="true"
        android:inputType="textEmailAddress"
        android:key="user_email_address"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/pref_default_email_address"
        android:title="@string/title_email_address" />
    <ListPreference
        app:defaultValue="reply"
        app:entries="@array/reply_entries"
        app:entryValues="@array/reply_values"
        app:key="user_favorite_social"
        app:title="@string/pref_title_favorite_social"
        app:useSimpleSummaryProvider="true" />

</PreferenceScreen>
